# quant_trading_system

./: .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  PROJECT_STATE.md  README.md  ROADMAP.md  pyproject.toml
configs/: backtest.yaml  config.yaml  ml_backtest.yaml  paper_trading.yaml
data/raw/: rawDataDisplay.py  sample_bars.csv
docs/: alpaca_integration.md  architecture.md  backtest_engine.md  charting.md  cli_usage.md  data_model.md  ml_integration.md  risk_management.md  signal_interface.md  user_manual.md
scripts/: download_data.py  generate_sample_data.py  run_backtest.py  run_ml_backtest.py  run_paper_trading.py  train_model.py
src/qts/: __init__.py
src/qts/backtest/: __init__.py  broker.py  engine.py  execution.py  fills.py  metrics.py  orders.py  portfolio.py  simulated_broker.py
src/qts/config/: __init__.py  loader.py  models.py  settings.py
src/qts/data/: __init__.py  alpaca.py  alpaca_downloader.py  loader.py  local_store.py  models.py  storage.py  validation.py
src/qts/execution/: __init__.py  alpaca_broker.py  broker.py  order_planner.py  paper_loop.py
src/qts/features/: __init__.py  dataset.py  technical.py
src/qts/ml/: __init__.py  dataset.py  dataset_builder.py  model.py  model_store.py  signal_provider.py  train.py
src/qts/reporting/: __init__.py  charts.py  (+1 more)
tests/: test_backtest_broker.py  test_backtest_engine.py  test_broker_adapter_architecture.py  test_charts.py  test_config.py  test_data_loader.py  test_execution_simulator.py  test_features.py  test_metrics.py  test_order_planner.py  test_risk.py  test_signals.py
(+13 files in other folders)
