[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "0.1.0"
description = "Lightweight research-first quantitative trading system with Alpaca integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.30.0",
  "joblib>=1.3.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "pyarrow>=14.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "rich>=13.7.0",
  "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

